--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -570,7 +570,7 @@ workflows:
             branches:
               ignore:
                 - main
-      - check-json docs:
+      - check-json-docs:
           requires:
             - generate-json-docs
           filters:
